src/objects/EMP_Training_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <label>Consultant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Birth__c</fullName>
        <label>Date Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number_Compiled__c</fullName>
        <formula>If(isnull( Document_Number_Org_member__c ), Document_Number__c ,Document_Number_Org_member__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number (Compiled)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number_Org_member__c</fullName>
        <label>Document Number Org member</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>CC: Cédula de Ciudadania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI: Tarjeta de Identidad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMP_Training_Enrollment__c</fullName>
        <label>EMP Training Enrollment</label>
        <referenceTo>EMP_Consultant__c</referenceTo>
        <relationshipLabel>EMP Training Enrollments</relationshipLabel>
        <relationshipName>EMP_Training_Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Femenino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masculino</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Belongs__c</fullName>
        <label>Organization Belongs</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Region__c</fullName>
        <label>Organization Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Name_Compiled__c</fullName>
        <formula>If(isnull(Producer_Name__c), Producer_Name_Org_Member__c ,Producer_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Producer Name (Compiled)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Name_Org_Member__c</fullName>
        <label>Producer Name Org Member</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Name__c</fullName>
        <label>Producer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Signature__c</fullName>
        <label>Producer Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Productive_Sector__c</fullName>
        <label>Productive Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Frijol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compostaje</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Training Enrollments</relationshipLabel>
        <relationshipName>EMP_Training_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <label>Subregion</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Township__c</fullName>
        <label>Township</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <description>Vereda</description>
        <label>Village</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village_attendees__c</fullName>
        <label>Village attendees</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>EMP Training Enrollment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Training Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Training Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>